[tool.poetry]
name = "python_api_examples"
version = "0.1.0"
description = ""
authors = ["Vladimir Lukiyanov <vladimir.lukiyanov@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
pydantic = "^1.7.3"
requests-mock = "^1.8.0"
yarl = "^1.6.3"
ratelimit = "^2.2.1"
toolz = "^0.11.1"
tenacity = "^6.2.0"
pandas = "^1.1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.6.4"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
